Bug fixed causing navbar to disappear on mobile screens

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -37,6 +37,7 @@ footer {
 
 .img-container {
     margin: 0px;
+    overflow: hidden;
 }
 
 .services {
@@ -110,6 +111,14 @@ footer {
     border: solid 1px rgb(226, 223, 223);
     font-weight: 500;
     color: rgb(90, 89, 89);
+}
+
+.facebook a {
+    color: black;
+}
+
+.facebook a:hover {
+    text-decoration: none;
 }
 
 body {
